crates/ruau/tests/compile/scope_invariance.stderr
error[E0308]: mismatched types
  --> tests/compile/scope_invariance.rs:20:9
   |
20 |         f.call::<()>(())
   |         ^^^^^^^^^^^^^^^^ expected `Result<_, Error>`, found future
   |
note: return type inferred to be `Result<_, ruau::Error>` here
  --> tests/compile/scope_invariance.rs:13:13
   |
13 | /             scope.create_function_mut(|_, ()| {
14 | |                 test.field = 42;
15 | |                 //~^ error: `test` does not live long enough
16 | |                 Ok(())
17 | |             })?
   | |_______________^
help: try wrapping the expression in `Ok`
   |
20 |         Ok(f.call::<()>(()))
   |         +++                +
